# hermes-task-framework

./: .gitmodules  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
hermes_task_framework/: __init__.py  cli.py
hermes_task_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hermes_task_framework/skills/: task-external-repos-pattern  task-framework  task-lifecycle-edge-cases  task-lifecycle-portability  task-timestamp-convention  task-tracker
