[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-task-framework"
version = "1.0.0"
description = "Structured task management skills for Hermes Agent"
authors = [{name = "Hauzer S. Lee"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.package-data]
hermes_task_framework = ["skills/**/*"]
