[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-task-framework"
version = "1.0.1"
description = "Structured task management skills for Hermes Agent"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["task-framework*"]

[tool.setuptools.package-data]
"task-framework" = ["skills/**/*"]
